--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,12 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link href="./output.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
     <header class="fixed w-full">
-        <nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-900">
+        <nav class="bg-white border-gray-400 py-2.5 dark:bg-gray-900">
             <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
                 <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Latvijas dārgumi</span>
                 <div class="flex items-center lg:order-2">
